<resources>
    <string name="app_name">RSS</string>
    <string name="articles_title">Articles</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="all_articles">All articles</string>
    <string name="updating_sources">Updating sources…</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="starred">Starred</string>
    <string name="try_again">Try again</string>
    <string name="no_results">No results</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="press_back_again_to_leave">Press back again to leave</string>
    <string name="star_article">Star article</string>
    <string name="remove_star">Remove star</string>
    <string name="generic_error">Oops! Something went wrong :(</string>
    <string name="gallery">Gallery</string>
    <string name="visit_website">Visit website</string>
    <string name="action_open_web">Open website</string>
    <string name="media_title">Media</string>
    <string name="map_title">Map</string>
    <string name="more_title">More</string>
    <string name="settings_title">Settings</string>
    <string name="search_hint">Filter by article title/description</string>
    <string name="share_article">Share article</string>
    <string name="common_connection_timeout">Connection timed out</string>
    <string name="article_detail_warning">The content above is just a preview. Swipe up to load full article.</string>
    <string name="mark_article_as_unread">Mark article as unread</string>
    <string name="mark_article_as_read">Mark article as read</string>
    <string name="action_more_options">More options</string>
    <string name="more_from">More from</string>
    <string name="manage_sources">Manage sources</string>
    <string name="lists">Lists</string>
    <string name="sources">Sources</string>
    <string name="show_articles">Show</string>
    <string name="add_to_list">Add to list</string>
    <string name="hide">Hide articles from this source</string>
    <string name="show">Show articles from this source</string>
    <string name="source_info">Source info</string>
    <string name="home_page">Home Page</string>
    <string name="contact_info">Contact info</string>
    <string name="feed_url">Feed url</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="description">Description</string>
    <string name="long_press_hint">Long press on a source for more options</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_starred_articles">No starred articles</string>
    <string name="no_starred_articles_explainer">Swipe or long press an article to star it</string>
    <string name="new_articles">New Articles</string>
    <string name="select_source">Select source</string>
    <string name="publisher_contact_info">Publisher contact information</string>
    <string name="settings">Settings</string>
    <string name="back">back</string>
    <string name="appearance">Appearance</string>
    <string name="font_size">Font size</string>
    <string name="expand_all_cards">Expand all cards</string>
    <string name="notifications">Notifications</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notifications_coming_soon">Notifications coming soon :)</string>
    <string name="general">General</string>
    <string name="open_articles_in_browser">Always open articles in browser</string>
    <string name="use_external_browser">Use external browser</string>
    <string name="about_app">About SpaceNews</string>
    <string name="version">Version %s</string>
    <string name="disclaimer">Disclaimer: This app is not affiliated nor related with any of the sites shown. The content the app shows comes from publicly available rss feeds and thus the app is not to be held responsible for any of the content displayed.</string>
    <string name="contact_developer">Contact developer</string>
    <string name="no_email_app_found">No email app found</string>
    <string name="developer_email">space.news.application@gmail.com</string>
    <string name="app_description">What\'s up in the Universe?!</string>
    <string name="share_the_love">Share the love</string>
    <string name="settings_delete_articles_older_than">Automatically delete articles older than</string>
    <string name="two_weeks">Two weeks</string>
    <string name="one_month">One month</string>
    <string name="two_months">Two months</string>
    <string name="three_months">Three months</string>
    <string name="notification_channel_name">Articles</string>
    <string name="notification_channel_description">Get notified about new articles</string>
    <string name="notify_all_articles">All new articles</string>
    <string name="get_notified_about">Get notified about</string>
    <string name="keywords">Keywords</string>
    <string name="add_keyword">Add keyword</string>
    <string name="add_source">Add source</string>
    <string name="feedback">%1$s feedback</string>
</resources>