<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar_with_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/description"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Universe.Button"
                android:textColor="@color/textColorSecondary" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Universe.Body1"
                tools:text="sdklf ladsfkj lasdkj flaskdj flasdj flkj" />

        </LinearLayout>

        <cz.minarik.nasapp.ui.custom.BorderedButton
            android:id="@+id/feedUrlButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:buttonImage="@drawable/ic_baseline_content_copy_24"
            app:buttonTitle="@string/feed_url" />

        <cz.minarik.nasapp.ui.custom.BorderedButton
            android:id="@+id/homepageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:buttonText="@string/home_page" />

        <cz.minarik.nasapp.ui.custom.BorderedButton
            android:id="@+id/contactInfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:buttonText="@string/contact_info" />

    </LinearLayout>

</LinearLayout>