<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!--        just to grab focus-->
    <View
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/articlesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:scrollbarSize="5dp"
                android:scrollbarThumbVertical="@color/colorPrimary"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/article_list_item" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?actionBarSize"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/shimmerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/article_list_item_shimmer_expanded" />

                    <include layout="@layout/article_list_item_shimmer" />

                    <include layout="@layout/article_list_item_shimmer" />

                    <include layout="@layout/article_list_item_shimmer" />

                    <include layout="@layout/article_list_item_shimmer" />

                </LinearLayout>

            </ScrollView>


            <cz.minarik.nasapp.ui.custom.StateView
                android:id="@+id/stateView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filterChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:chipSpacingHorizontal="16dp"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterAll"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        app:chipIcon="@drawable/ic_baseline_article_24"
                        app:chipIconTint="@color/colorAccent"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterUnread"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unread"
                        app:chipIcon="@drawable/ic_baseline_check_24"
                        app:chipIconTint="@color/colorAccent"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterStarred"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starred"
                        app:chipIcon="@drawable/ic_baseline_star_24"
                        app:chipIconTint="@color/colorAccent"
                        app:chipIconVisible="true" />

                </com.google.android.material.chip.ChipGroup>

                <androidx.cardview.widget.CardView
                    android:id="@+id/newPostsCardView"
                    style="@style/CardViewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/colorSurface"
                    app:contentPadding="12dp"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/newPostsTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="37 new posts" />

                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleEnabled="false">

            <FrameLayout
                android:id="@+id/toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/include_toolbar_with_subtitle" />

                <cz.minarik.nasapp.ui.custom.MaterialSearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MaterialSearchViewStyle" />

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
